css/styles.css
.center{
    text-align: center;
}

h5{
    font-size: 20px;
}

h4, h5{
    font-weight: 500;
}

#header{
    position: fixed;
    height: 80px;
    width: 100%;
    background: rgba(0, 0, 0, .5);
    z-index: 100;
}

#left-nav{
    position: fixed;
    width: 300px;
    background-color: rgba(256, 256, 256, 1);
    z-index: 90;
    height: 100%;
}

#title{
    color: #eee;
    font-size: 45px;
    font-weight: 600;
    text-align: center;
    line-height: 80px;
    display: flex;
    justify-content: center;
    transition: .3s;
}

#title:hover{
    color: #e14e42;
}

.wrapper{
    height: 100%;
    width: 100%;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    resize: none;
    overflow: auto;
    flex-direction: column;
    position: absolute;
}

.top-img{
    background-color: #333;
}

.toptext{
    color: #eee;
    padding-top:4%;
}

.section{
    position: relative;
    width: 100%;
    padding-top: 30px;
    color: #eee;
    display: block;
    margin: 0;
    border: 0;
    vertical-align: baseline;
}

.me{
    background-color: #3754a4;
}

.web{
    background-color: #333;
}

.apps{
    background-color: #3754a4;
}

.film{
    background-color: #333;
}

.music{
    background-color: #3754a4;
}

.writing{
    background-color: #333;
}

.vertcenter{
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    align-items: center;
}

@media (max-width: 1100px){
    nav{
        display:none;
    }
    #mobile-nav {
        width:100%;
        height:60px;
        position:fixed;
        bottom:0;
        left:0;
        background-color: #eee;
        z-index: 100;
        display: -webkit-box;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        align-items: center;
        justify-content: center;
        transition: .3s;
    }
    #mobile-nav:hover{
        background-color: #aaa;
        cursor: pointer;
    }
    .mobile-menu{
        bottom: 60px;
        width:100%;
        position: fixed;
        left: 0;
        z-index: 120;
    }
    .mobile-item{
        color: #333;
        font-size: 25px;
        line-height: 60px;
        border-bottom: 1px solid #666;
        background-color: #eee;
        transition: .3s;
        text-align:center;
    }
    .mobile-item:hover{
        background-color: #aaa;
    }
    #title{
        font-size: 30px;
        line-height: 60px;
    }
    #header{
        height: 60px;
    }
    #footer{
        margin-bottom: 60px;
    }
    #story-title{
        font-size: 25px;
    }
    #story-content{
        font-size: 15px;
    }
    .toptext{
        padding-top: 6%;
    }
    .smalleronmobile{
        font-size: 30px;
    }
    .smalleronmobile2{
        font-size: 20px;
    }
}

@media(max-width:600px){
    .toptext{
        padding-top: 10%;
    }
    .smalleronmobile{
        font-size: 25px;
    }
    .smalleronmobile2{
        font-size: 15px;
    }
    .hidemobile{
        display: none !important;
    }
}

@media(min-width: 1100px){
    #mobile-nav{
        display: none;
    }
}

.storyblock{
    background-color: #eee;
    border: 5px solid #333;
    color: #333;
    padding-left: 5%;
    padding-right: 5%;
    padding-top: 2%;
    margin-bottom: 40px;
    transition: .3s;
}

.storyblock:hover{
    background-color: #bbb;
    cursor: pointer;
}

#storytitle{
    font-weight: 700;
}

#footer{
    background-color: #555;
    height: 90px;
    color: #ddd;
}

.footertext{
    font-weight: 800;
    display: inline;
    position: absolute;
}

.modal{
    background: rgba(0,0,0,.8);
    position: fixed;
    top: 0; left: 0; right: 0; bottom: 0;
    z-index: 10;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    align-items: center;
    justify-content: center;
}

.modal-dialog{
  background: #fefefe;
  border: #333 solid 1px;
  border-radius: 5px;
  position: fixed; 
  z-index: 11;
  width: 80%;
  transform: translateX(-50%);
  height: 60%;
  top: 20%;
  overflow-y: scroll;
}

#story-title{
    font-weight: 700;
    padding-left: 5%;
    padding-top: 2%;
    padding-right: 5%;
}

#story-content{
    padding-left: 5%;
    padding-top: 3%;
    padding-right: 5%;
}

.story-line{
    border-bottom: 1px solid #999;
    margin-left: 5%;
    margin-right: 5%;
    margin-top: -10px;
}

